# baryon

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
.reuse/: dep5
crates/baryon_math/: Cargo.toml  README.md
crates/baryon_math/src/: lib.rs  vec.rs  vec2.rs  vec3.rs  vec4.rs
src/: main.rs
